create login page ui and setup routing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netflix GPT</title>
   </head>
-  <body class="bg-black/80">
+  <body>
     <section id="root"><section />
     <script type="module" src="/src/main.jsx"></script>
   </body>
