--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link href="/src/index.css" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="https://cdn-icons-png.flaticon.com/512/2504/2504929.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <!-- Android navigation bar color -->
+    <meta name="theme-color" content="#FFCC99" />
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#FFCC99" />
+
     <title>Netflix GPT</title>
   </head>
   <body>
